--- a/components/Layout/Navbar/Navbar.module.css
+++ b/components/Layout/Navbar/Navbar.module.css
@@ -61,7 +61,7 @@
  .itemsImgUsuario{
    display:none;
    position:absolute;
-   background:rgba(235, 211, 211, 0.8);
+   background:rgba(0, 0 , 0, 0.9);
    width: 100px;
    list-style:none;
    padding-left: 0;
@@ -69,7 +69,7 @@
    justify-content: center;
    align-items: center;
    border-radius: 5px;
-   color: black;
+   color: white!important;
 
  }
  
