--- a/pages/Login/LoginForm.module.css
+++ b/pages/Login/LoginForm.module.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    background-image: url("../../../assets/Login/login.jpeg");
+    background-image: url("../../../assets/BannerCmed.jpg");
     background-repeat: no-repeat;
     background-size: cover;
 }
@@ -25,7 +25,7 @@
     height: fit-content;
     align-items: center;
     justify-content: center;
-    box-shadow: 0 50px 0px -5px rgb(0, 0, 0, 0.8);
+    /* box-shadow: 0 50px 0px -5px rgb(0, 0, 0, 0.8); */
     margin-left: 15%;
     padding-bottom: 2.5%;
 }
