--- a/pages/Login/LoginForm.module.css
+++ b/pages/Login/LoginForm.module.css
@@ -2,7 +2,7 @@
     display: flex;
     width: 100%;
     height: 100vh;
-    background-image: url("../../../assets/BannerCmed.jpg");
+    background-image: url(../../assets/BannerCmed.jpg);
     background-repeat: no-repeat;
     background-size: cover;
 }
